bug: Video gets smaller on tablet, doesnt get bigger again
SPLASH SCREEN: Video player not resizing from tablet to desktop

--- a/src/pages/Splash/Splash.module.scss
+++ b/src/pages/Splash/Splash.module.scss
@@ -27,7 +27,6 @@
 }
 
 .video {
-  width: getColumns(28, $bp-large);
   margin: 0 auto;
 }
 
